# MiniJavaCompiler

./: .gitattributes  .gitignore  README.md
minijava/: .gitignore  CMakeLists.txt  diff.sh  generate_parser.sh  memory_check.sh  run.sh  test.sh
minijava/include/: utils.h
minijava/include/ast/: BindingVisitor.h  GraphvizPrinterVisitor.h  SymbolTable.h  TypeCheckingPass.h
minijava/include/jjtreeCustomNodes/: ASTAdditiveNode.h  ASTClassDecl.h  ASTEqualNotEqualNode.h  ASTIdentifier.h  ASTRelationalNode.h  ASTSimpleTypeNode.h  ASTUnaryNode.h
minijava/include/logger/: Logger.h
minijava/parser_generated_files/: ErrorHandler.h  Example.cc  Example.h  ExampleConstants.h  ExampleTokenManager.cc  ExampleTokenManager.h
minijava/parser_grammar/: parser.jj  parser.jjt
minijava/src/: CMakeLists.txt  main.cpp  utils.cpp
minijava/src/ast/: BindingVisitor.cpp  CMakeLists.txt  GraphvizPrinterVisitor.cpp  SymbolTable.cpp  TypeCheckingPass.cpp
minijava/src/jjtreeCustomNodes/: ASTClassDecl.cc  ASTEqualNotEqualNode.cc  ASTLiteralNode.cpp  ASTRelationalNode.cc  ASTSimpleTypeNode.cc  ASTUnaryNode.cc
minijava/src/logger/: Logger.cpp
minijava/test/: CMakeLists.txt  MiniJavaParsingTest.cpp  main.cpp
minijava/test/testResources/: ExpressionTest.java  MainClassDeclaration.java  ParsingExpression.java  Statements.java  VariableClassMethodDeclaration.java
minijava/testing_files/: DomainAnalysisExample.java
minijava/testing_files/Week_1_2/: ComprehensiveTest.java  SimpleClass.java
postfix_ast/: generate_parser.sh  run.sh
postfix_ast/include/: EvaluatorVisitor.h  InfixVisitor.h  PostfixVisitor.h
postfix_ast/parser_grammar/: parser.jj  parser.jjt
postfix_ast/src/: CMakeLists.txt  EvaluatorVisitor.cpp  PostfixVisitor.cpp  main.cpp
postfix_ast/testing_files/: example.txt
prefix_ast/: CMakeLists.txt  diff.sh
prefix_ast/include/: EvaluatorVisitor.h  InfixVisitor.h  PrefixVisitor.h
prefix_ast/parser_grammar/: parser.jj  parser.jjt
prefix_ast/src/: CMakeLists.txt  InfixVisitor.cpp  PrefixVisitor.cpp  main.cpp
prefix_ast/testing_files/: example_2.txt  example_3.txt
